* Added $maxrows_method variable that is used to control the mechanism that
  jsqsh uses to limit row results. This added because I discovered that 
  setting the row limit in some JDBC drivers caused unwanted side effects.
* Added \procs command to display list of procedures in the current database.
* Added PL/SQL analyzer so that semicolon termination can be used against
  Oracle. 
* Improved formatting of number datatypes (tinyint, int, short, bigint,
  float, double, etc.) to minimize the amount of space required for display
  wherever possible.
* Fixed the driver definition for the DB2 JDBC driver.
* Commands that edit or alter the current SQL buffer will also affect the
  readline history as if the user had just typed in the buffer. E.g. if you
  hit '!3' at the prompt to re-load the third oldest query, the readline
  history will look as if you just typed that query. 
* Fixed bug #1816504 - Queries returning multiple result sets were getting
  fouled.
* Fixed bug #1820182 - Handling of Oracle NUMBER columns failing during
  formatting. 

Release 0.9.5
* Dramatically improved tab completion. It is now contextual to your position
  within the SQL statement being written. If the FROM clause has been written
  or the target of the INSERT/UPDATE/DELETE has been specified, then the
  completion will restrict itself to that context. This was more difficult
  than I expected!
* Added $headers and $footers configuration variables to control display
  of result header/footer information
* Added -h and -f to the \go command to toggle the display of result 
  header and footer information respectively.
* Added "-w domain" flag to \connect so that domain based authentication
  can be used when connecting. Currently only the mssql-jtds driver 
  recognizes this option. 
* Added \eval command to read and process the contents of a file.
* Added tab completion of procedure names.
* Added handling/display of SQL warnings.
* Improved formatting of error messages.