@@ -643,7 +643,7 @@ SEE ALSO
     </Command>
     
     <Command name="\describe" class="org.sqsh.commands.Describe">
-        <Description>Displays a description of a table (or view)</Description>
+        <Description>Displays a description of a database object</Description>
            
         <Help><![CDATA[
 SYNOPSIS
